# bootcamp_2025

./: .env  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  start.sh
Class_Documents/: Class_2.md  Class_3.md
_tests/: test_exercises_5.py
assets/: backgrounds.html
classes/: class_1.md
data_analysis/.ipynb_checkpoints/: JupyterNB-checkpoint.ipynb
exercises/: .cursorrules  exercises_1.py  exercises_2.py  exercises_5.py
exercises/exercises_5_data/: __init__.py  dataset.csv
init-scripts/: 01-create-postgres-user.sql
