[project]
name = "data-analysis"
version = "0.1.0"
description = "This is a Python course for the Devlights forth bootcamp."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Sebastián Atlántico", email = "sebastian.rodriguez@devlights.com" },
]
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = ["pytest>=9.0.1"]
